--- a/src/components/menComp/Men.css
+++ b/src/components/menComp/Men.css
@@ -1,6 +1,23 @@
 
-/* .cardWatch{
-    display: flex;
-    flex-direction: column;
-} */
+#img2{
+    width: 267px;
+    height: 347px;
+    border-radius: 10px;
+}
+.menCard{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
 
+}
+
+.cardMen{
+    padding: 45px 0;
+    padding-left: 30px;
+    background-color: black;
+    color: goldenrod;
+}
+
+button{
+    font-size: 15px;
+}
