--- a/src/components/navBar/TopNav.css
+++ b/src/components/navBar/TopNav.css
@@ -27,7 +27,7 @@ Nav.Link{
 #brandCart2{
     color: goldenrod;
     padding-right: 15px;
-    padding-bottom: 5px;
+    padding-top: 15px;
     align-items: center;
     font-size: 35px;
 }
