added new changes

--- a/src/components/abotUs/AboutUs.css
+++ b/src/components/abotUs/AboutUs.css
@@ -23,17 +23,17 @@ a{
 
 }
 hr{
-    color: goldenrod;
+    color: #F0DA98;
 }
 
 #Btn3{
-    color: goldenrod;
+    color:  #F0DA98;
     font-size: 35px;
     margin: 5px;
 }
 
 #myFooter{
-    color: goldenrod;
+    color: #F0DA98;
     text-align: center;
 }
 #social{
