--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -9,7 +9,7 @@
     align-items: center;
     padding: 6px;
     width: 190px;
-    color: goldenrod;
+    color:  #F0DA98;
 }
 #myIcon{
     font-size: 25px;
