--- a/src/components/hompePage/Carousel.css
+++ b/src/components/hompePage/Carousel.css
@@ -4,14 +4,14 @@ img{
 }
 
 p{
-    color: goldenrod;
+    color:  #F0DA98;
 }
 h5{
-    color: goldenrod;
+    color:  #F0DA98;
 }
 
 #Btn{
-    background-color: goldenrod;
+    background-color:  #F0DA98;
     border: none;
     position: relative;
     bottom: 45px;
