--- a/src/components/collections/Collection.css
+++ b/src/components/collections/Collection.css
@@ -8,7 +8,7 @@
     padding: 38px 0;
     padding-left: 17px;
     background-color: black;
-    color: goldenrod;
+    color:  #F0DA98;
     /* display: flex; */
 }
 
