--- a/src/components/hompePage/Home.css
+++ b/src/components/hompePage/Home.css
@@ -1,6 +1,6 @@
 .myHome{
     background-color: black;
-    color: goldenrod;
+    color:  #F0DA98;
 }
 #watch1{
     width: 498px;
@@ -40,7 +40,7 @@
     height: 49px;
     border: none;
     border-radius: 10px;
-    background-color: goldenrod;
+    background-color:  #F0DA98;
     color: #fff;
     font-size: 20px;
 }
@@ -62,5 +62,5 @@
 #heading1{
     text-align: center;
     padding-top: 65px;
-    color: goldenrod;
+    color:  #F0DA98;
 }
