--- a/src/components/menComp/Men.css
+++ b/src/components/menComp/Men.css
@@ -15,7 +15,7 @@
     padding: 45px 0;
     padding-left: 30px;
     background-color: black;
-    color: goldenrod;
+    color:  #F0DA98;
 }
 
 button{
