--- a/src/components/myAccount/Login.css
+++ b/src/components/myAccount/Login.css
@@ -7,7 +7,7 @@
 }
 
 .boxs{
-    background-color: goldenrod ;
+    background-color:  #F0DA98 ;
     padding: 10px 30px 30px 20px;
     margin-bottom: 55px;
     border-radius: 10px;
@@ -28,7 +28,7 @@
 .forms button{
     height: 50px;
     background-color: rgb(45, 45, 54);
-    color: goldenrod;
+    color:  #F0DA98;
 }
 
 .forms button:hover {
@@ -53,7 +53,7 @@
 }
 
 .signs{
-    background-color: goldenrod;
+    background-color:  #F0DA98;
     padding: 10px 30px 30px 20px;
     display: flex;
     flex-direction: column;
@@ -70,7 +70,7 @@
 
 .signup button{
     height: 50px;
-    background-color: goldenrod;
+    background-color:  #F0DA98;
     color: black;
     width: 350px;
 }
