--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -10,6 +10,7 @@
 .productlistCard{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     text-align: center;
 }
 
