--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -13,7 +13,10 @@
     grid-template-rows: auto;
     text-align: center;
 }
-
+.productlistCard:hover{
+    box-shadow: 0 10px 10px 10px rgb(0,0,0,0);
+    cursor: pointer;
+}
 .productCard{
     padding: 45px 0;
     padding-left: 30px;
