--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,16 @@
     /* Your styles for large screens */
   }
   
+.warning{
+  height: 40px;
+  width: 250px;
+  position: absolute;
+  right: 0;
+  top: 10px;
+  background-color: #F0DA98;
+  font-size: 1.1rem;
+  color: white;
+  font-family: cursive;
+  padding: 5px;
+  border-radius: 5px;
+}
